--- a/Personal_Page/Home.html
+++ b/Personal_Page/Home.html
@@ -23,7 +23,7 @@
                     <h1>Preston Graber<br></h1>
                 <h3><span>Web Designer</span></h3>
                 <p>
-                    I've been programing since the year of 2018. I started learning back-end using languages such as C,Java,C#.
+                    I've been programming since the year of 2018. I started learning back-end using languages such as C,Java,C#.
                     In 2020 I transitioned to learning Front-End Development. I am proficient with languages HTML5, CSS3, JavaScript.
                     I have experience with frameworks such as: Redux and libraries with React.
                 </p>
@@ -32,8 +32,8 @@
             <div class="col_2">
                 <a href="#"><img src="photos/youtube.png" alt=""></a>
                 <a href="#"><img src="photos/github.png" alt=""></a>
-                <a href="#"><img src="photos/linkedn.png" alt=""></a>
-                <a href="#"><img src="photos/instagram.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/preston-graber-9b051a227/" target = "_blank"><img src="photos/linkedn.png" alt=""></a>
+                <a href="https://www.instagram.com/prestongraber1/" target = "_blank"><img src="photos/instagram.png" alt=""</a>
             </div>
             <div class="col_3">
                 <img src="photos/profile_photo.jpg">
