--- a/Personal_Page/Home.html
+++ b/Personal_Page/Home.html
@@ -30,8 +30,8 @@
                 <a href = "#">About Me</a>
             </div>
             <div class="col_2">
-                <a href="#"><img src="photos/youtube.png" alt=""></a>
-                <a href="#"><img src="photos/github.png" alt=""></a>
+                <a href="https://www.youtube.com/channel/UCgsWWSSgAeKImRUf7Ind_Sg" target = "_blank"><img src="photos/youtube.png" alt=""></a>
+                <a href="https://github.com/PrestonGraber" target = "_blank"><img src="photos/github.png" alt=""></a>
                 <a href="https://www.linkedin.com/in/preston-graber-9b051a227/" target = "_blank"><img src="photos/linkedn.png" alt=""></a>
                 <a href="https://www.instagram.com/prestongraber1/" target = "_blank"><img src="photos/instagram.png" alt=""</a>
             </div>
