--- a/Personal_Page/Home.html
+++ b/Personal_Page/Home.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="#"><span>Home</span></a></li>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
         
