--- a/Personal_Page/About.html
+++ b/Personal_Page/About.html
@@ -14,6 +14,6 @@
                 <ul>
                     <li><a href="Home.html">Home</a></li>
                     <li><a href="Projects.html">Projects</a></li>
-                    <li><a href="#"><span>Contact</span></a></li>
+                    <li><a href="Contact.html"><span>Contact</span></a></li>
                 </ul>
             </nav>
