--- a/Personal_Page/Projects.html
+++ b/Personal_Page/Projects.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="Home.html">Home</a></li>
-                    <li><a href="Projects.html">Projects</a></li>
-                    <li><a href="#"><span>Contact</span></a></li>
+                    <li><a href="#"><span>Projects</span></a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
