--- a/Personal_Page/Home.html
+++ b/Personal_Page/Home.html
@@ -9,10 +9,11 @@
     </head>
     <body>
         <div class="container">
-            <img src = "photos/logo.png" class = "logo">
+            <img src = "photos/Pacifico.png" class = "logo">
             <nav>
                 <ul>
                     <li><a href="#"><span>Home</span></a></li>
+                    <li><a href="#">Resume</a></li>
                     <li><a href="Projects.html">Projects</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
@@ -22,11 +23,20 @@
                 <h3><span>- I am</span></h3>
                     <h1>Preston Graber<br></h1>
                 <h3><span>Front-End Developer</span></h3>
-                <p>
-                    I've been programming since the year of 2018. I started learning back-end using languages such as C,Java,C#.
-                    In 2020 I transitioned to learning Front-End Development. I am proficient with languages HTML5, CSS3, JavaScript.
-                    I have experience with frameworks such as: Redux and libraries with React.
-                </p>
+               <div class="skill">
+                   <h1>My skills</h1>
+               </div>
+                <div class="skill-box">
+                    <div class="skill-title">
+                        <div class="img">
+                            <img src="">
+                        </div>
+                    </div>
+                </div>
+
+
+
+
                 <a href = "About.html">About Me</a>
             </div>
             <div class="col_2">
