--- a/Personal_Page/About.html
+++ b/Personal_Page/About.html
@@ -13,7 +13,15 @@
             <nav>
                 <ul>
                     <li><a href="Home.html">Home</a></li>
+                    <li><a href="#">Resume</a></li>
                     <li><a href="Projects.html">Projects</a></li>
-                    <li><a href="Contact.html"><span>Contact</span></a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
+                <div class="about-me">
+                    <h1>About Me</h1>
+                    <h4><span>I am a Front-End Developer located in FortWayne,In</span></h4>
+                    <p>
+                        
+                    </p>
+                </div>
             </nav>
