--- a/Personal_Page/Contact.html
+++ b/Personal_Page/Contact.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Preston Graber</title>
+        <title>Contact</title>
         <meta name = "viewport" content = "width=device-width ,initial-scale=1.0">
         <link href = "style.css" rel = "stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+        <script src = "https://kit.fontawesome.com/04074e904a.js" crossorigin = "anonymous"></script>
     </head>
     <body>
         <div class="container">
@@ -17,3 +18,34 @@
                     <li><a href="#"><span>Contact</span></a></li>
                 </ul>
             </nav>
+            <div class="contact">
+                <form >
+                    <h2>Contact Form</h2>
+                    <div class="row">
+                             <div class="input-group">
+                            <input type="text" id = "name" required>
+                            <label for="name"><i class="fa-solid fa-user"></i> Name</label>
+                            </div>
+        
+                            <div class="input-group">
+                            <input type="text" id = "number" required>
+                            <label for="number"><i class="fa-solid fa-phone"></i> Phone No.</label>
+                            </div>
+                    </div>
+
+                    <div class="input-group">
+                    <input type="email" id = "email" required>
+                    <label for="email"><i class="fa-solid fa-envelope"></i> Email</label>
+                    </div>
+
+                    <div class="input-group">
+                   <textarea id = "message" rows = "8" required></textarea>
+                    <label for="message"><i class="fa-solid fa-comments"></i> Your message</label>
+                    </div>
+
+                    <button type = "submit">submit <i class="fa-solid fa-paper-plane"></i></button>
+                </form>
+            </div>
+        </div>
+    </body>
+</html>
