--- a/Personal_Page/Projects.html
+++ b/Personal_Page/Projects.html
@@ -13,7 +13,10 @@
             <nav>
                 <ul>
                     <li><a href="Home.html">Home</a></li>
+                    <li><a href="#">Download Resume</a></li>
                     <li><a href="#"><span>Projects</span></a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
+                <img src="photos/dropdown.png" class = "dropdown" alt="">
             </nav>
+          
