--- a/Personal_Page/About.html
+++ b/Personal_Page/About.html
@@ -6,22 +6,30 @@
         <link href = "style.css" rel = "stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&family=Water+Brush&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="container">
-            <img src = "photos/logo.png" class = "logo">
+            <img src = "photos/Pacifico.png" class = "logo">
             <nav>
                 <ul>
                     <li><a href="Home.html">Home</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Download Resume</a></li>
                     <li><a href="Projects.html">Projects</a></li>
                     <li><a href="Contact.html">Contact</a></li>
                 </ul>
-                <div class="about-me">
-                    <h1>About Me</h1>
-                    <h4><span>I am a Front-End Developer located in FortWayne,In</span></h4>
-                    <p>
-                        
-                    </p>
-                </div>
+                <img src="photos/dropdown.png" class = "dropdown" alt="">
             </nav>
+                <div class="about-me">
+                <h1>About Me</h1>
+                <h4><span>I am a Front-End Developer located in FortWayne,In</span></h4>
+                <p>
+                    <span id = "about-I">I</span> started software development in the year of 2018, learning how to program microcontrollers
+                    using objective C. Further on I picked up the languages <span>Java</span>, <span>HTML5</span>, <span>CSS3</span>, and <span>Javascript</span>.
+                    Some things I like to do on my free time is play piano, work on my coral reef tank, and work
+                    on side-projects.
+                </p>
+                </div>
+            </div>
+            </body>
+         </html>
