--- a/Personal_Page/Contact.html
+++ b/Personal_Page/Contact.html
@@ -10,17 +10,18 @@
     </head>
     <body>
         <div class="container">
-            <img src = "photos/logo.png" class = "logo">
+            <img src = "photos/Pacifico.png" class = "logo">
             <nav>
                 <ul>
                     <li><a href="Home.html">Home</a></li>
+                    <li><a href="#">Download Resume</a></li>
                     <li><a href="Projects.html">Projects</a></li>
                     <li><a href="#"><span>Contact</span></a></li>
                 </ul>
             </nav>
             <div class="contact">
                 <form >
-                    <h2>Contact Form</h2>
+                    <h2><span>Contact Form</span></h2>
                     <div class="row">
                              <div class="input-group">
                             <input type="text" id = "name" required>
