--- a/Personal_Page/Projects.html
+++ b/Personal_Page/Projects.html
@@ -20,21 +20,24 @@
                 <img src="photos/dropdown.png" class = "dropdown" alt="">
             </nav>
             <div class="projects-container">
+
                 <div class="projects">
                     <h2>Weather App</h2>
                     <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
+                    <div class="project-button">
+                        <a href="" class = "project-button">View Project</a>
+                        <a href="" class = "project-button">View Code</a>
+                    </div>
                         
+                </div>
+
+                <div class="projects">
+                    <h2>Weather App</h2>
+                    <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
                 </div>
                 <div class="projects">
                     <h2>Weather App</h2>
                     <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
-                </div>
-            </div>
-            <div class="projects-container">
-                <div class="projects">
-                    <h2>Weather App</h2>
-                    <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
-                        
                 </div>
                 <div class="projects">
                     <h2>Weather App</h2>
