--- a/Personal_Page/Projects.html
+++ b/Personal_Page/Projects.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
+        <div class="container1">
             <img src = "photos/Pacifico.png" class = "logo">
             <nav>
                 <ul>
@@ -24,23 +24,20 @@
                 <div class="projects">
                     <h2>Weather App</h2>
                     <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
-                    <div class="project-button">
-                        <a href="" class = "project-button">View Project</a>
-                        <a href="" class = "project-button">View Code</a>
-                    </div>
-                        
+                    <a href=""class ="project-button">View Code</a>
+                    <a href=""class ="project-button">View Project</a>
                 </div>
 
                 <div class="projects">
-                    <h2>Weather App</h2>
+                    <h2>Tic-Tac-Toe</h2>
+                    <img src="photos/tic-tac-toe.jpeg" alt="Weather_App" class = "project1">
+                </div>
+                <div class="projects">
+                    <h2>Stock Market</h2>
                     <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
                 </div>
                 <div class="projects">
-                    <h2>Weather App</h2>
-                    <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
-                </div>
-                <div class="projects">
-                    <h2>Weather App</h2>
+                    <h2>Path Finding</h2>
                     <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
                 </div>
             </div>
