--- a/Personal_Page/Projects.html
+++ b/Personal_Page/Projects.html
@@ -24,8 +24,10 @@
                 <div class="projects">
                     <h2>Weather App</h2>
                     <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
+                   <div class="buttonContainer">
                     <a href=""class ="project-button">View Code</a>
                     <a href=""class ="project-button">View Project</a>
+                   </div>
                 </div>
 
                 <div class="projects">
