--- a/Personal_Page/Contact.html
+++ b/Personal_Page/Contact.html
@@ -20,7 +20,7 @@
                 </ul>
             </nav>
             <div class="contact">
-                <form >
+                <form onsubmit = "sendMail()" >
                     <h2><span>Contact Form</span></h2>
                     <div class="row">
                              <div class="input-group">
@@ -33,12 +33,10 @@
                             <label for="number"><i class="fa-solid fa-phone"></i> Phone No.</label>
                             </div>
                     </div>
-
                     <div class="input-group">
                     <input type="email" id = "email" required>
                     <label for="email"><i class="fa-solid fa-envelope"></i> Email</label>
                     </div>
-
                     <div class="input-group">
                    <textarea id = "message" rows = "8" required></textarea>
                     <label for="message"><i class="fa-solid fa-comments"></i> Your message</label>
@@ -48,5 +46,6 @@
                 </form>
             </div>
         </div>
+            <script src="contact.js"></script>
     </body>
 </html>
