--- a/Personal_Page/Projects.html
+++ b/Personal_Page/Projects.html
@@ -19,8 +19,11 @@
                 </ul>
                 <img src="photos/dropdown.png" class = "dropdown" alt="">
             </nav>
+            <div class="project-header">
+                <h1>Projects</h1>
+            </div>
             <div class="projects-container">
-
+                
                 <div class="projects">
                     <h2>Weather App</h2>
                     <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
@@ -33,14 +36,26 @@
                 <div class="projects">
                     <h2>Tic-Tac-Toe</h2>
                     <img src="photos/tic-tac-toe.jpeg" alt="Weather_App" class = "project1">
+                    <div class="buttonContainer">
+                        <a href=""class ="project-button">View Code</a>
+                        <a href=""class ="project-button">View Project</a>
+                       </div>
                 </div>
                 <div class="projects">
                     <h2>Stock Market</h2>
                     <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
+                    <div class="buttonContainer">
+                        <a href=""class ="project-button">View Code</a>
+                        <a href=""class ="project-button">View Project</a>
+                       </div>
                 </div>
                 <div class="projects">
                     <h2>Path Finding</h2>
                     <img src="photos/Weather_App.jpeg" alt="Weather_App" class = "project1">
+                    <div class="buttonContainer">
+                        <a href=""class ="project-button">View Code</a>
+                        <a href=""class ="project-button">View Project</a>
+                       </div>
                 </div>
             </div>
         </div>
