--- a/lesson2/lesson2.html
+++ b/lesson2/lesson2.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>lesson2</title>
-        <link href = "style.css" rel = "stylesheet">
-    </head>
-    <body>
-        <div class = "head">
-        <h1>My Schedule</h1>
-        </div>
-        <table class = "table">
-            <!--Table header TOP-->
-            <tr>
-            <th>Day</th>
-            <th>Time</th>
-            <th>Activity</th>
-           </tr>
-           <!--First Row-->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>tables</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+   <div class="container">
+       <table>
            <tr>
+               <th>DAY</th>
+               <th>TIME</th>
+               <th>ACTIVITY</th>
+           </tr>
+           <tr class = "black">
                <td>Monday</td>
-               <td>8:00-10:00am</td>
-               <td>I code</td>
-           </tr>
-           <!--Second row-->
-           <tr>
-            <td>tuesday</td>
-            <td>8:00-10:00am</td>
-            <td>I code</td>
+               <td>9am</td>
+               <td>cofee</td>
            </tr>
            <tr>
-            <td>wednesday</td>
-            <td>8:00-10:00am</td>
-            <td>I code</td>
-           </tr>
-           <tr>
-            <td>thursday</td>
-            <td>8:00-10:00am</td>
-            <td>I code</td>
-           </tr>
-           <tr>
-            <td>friday</td>
-            <td>8:00-10:00am</td>
-            <td>I code</td>
-        </table>
-        
-    </body>
-    <footer>
-        <p>Copyright @pete</p>
-    </footer>
+            <td>Monday</td>
+            <td>9am</td>
+            <td>cofee</td>
+        </tr>
+        <tr class = "black">
+            <td>Monday</td>
+            <td>9am</td>
+            <td>cofee</td>
+        </tr>
+        <tr>
+            <td>Monday</td>
+            <td>9am</td>
+            <td>cofee</td>
+        </tr>
+        <tr class = "black">
+            <td>Monday</td>
+            <td>9am</td>
+            <td>cofee</td>
+        </tr>
+       </table>
+   </div> 
+</body>
 </html>
-<!--Go ahead make another webpage using what you learned in this lesson  Table,link a css,footer,style to your liking-->
