--- a/Landing_Page/main.html
+++ b/Landing_Page/main.html
@@ -1,39 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Preston Graber</title>
-        <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
-        <link href = "style.css" rel = "stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@1,600&display=swap" rel="stylesheet">
-    </head>
-
-    <body>
-        <div class="container">
-            <nav>
-                <img src="logo.png" class="logo">
-            <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <li><a href="#">GITHUB</a></li>
-                <li><a href="#">RESUME</a></li>
-            </ul>
-        </nav>
-        <a href="#" class = "contact-btn">CONTACT ME <img src="contact.png"></a>
-        <div class="row">
-            <div class="col-1">
-                <h1>I'm Preston Graber, From Indiana.
-                    I specialize in Front-End Web Development.
-                </h1>
-                <p>
-                    <span>Programing</span> Since 2018
-                </p>
-            </div>
-            <div class="col-2">
-                <img src="rectangle.png" class="back-img">
-                <img src="profile.png" class="profile-img">
-            </div>
-        </div>
-    </div>
-
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>landing page</title>
+    <link rel="stylesheet" href="style.scss">
+</head>
+<body>
+    
+</body>
 </html>
