--- a/Landing_Page/main.html
+++ b/Landing_Page/main.html
@@ -5,9 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="nav">
+        <img src="photos/Pacifico (4).png" alt="logo">
+        <div class="anchors">
+            <a href="">Features</a>
+            <a href="">Pricing</a>
+            <a href="">About</a>
+            <a href="">Support</a>
+            <a href="">Blog</a>
+            <div class="sign-up">
+                <p>Have an account? <a href="">Sign-in </a>or <a href="">Sign-up</a> </p>
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="words">
+        <h1>Landing Page</h1>
+        <p>It was a weird concept. Why would I really need to generate a random paragraph?
+             Could I actually learn something from doing so? All these questions were running through
+              his head as he pressed the generate button. To his surprise,
+              he found what she least expected to see.</p>
+             <a href=""> Get Started</a>
+             </div>
+            
+    </div>
 </body>
 </html>
