--- a/Landing_Page/main.html
+++ b/Landing_Page/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landing page</title>
+    <title>Landing page</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
 </head>
@@ -17,21 +17,20 @@
             <a href="">About</a>
             <a href="">Support</a>
             <a href="">Blog</a>
-            <div class="sign-up">
-                <p>Have an account? <a href="">Sign-in </a>or <a href="">Sign-up</a> </p>
-            </div>
         </div>
+        <div class="sign-up">
+            <p>Have an Account? <a href="">Sign-in</a> or <a href="">Sign-up</a></p>
+        </div>   
     </div>
     <div class="content">
         <div class="words">
-        <h1>Landing Page</h1>
-        <p>It was a weird concept. Why would I really need to generate a random paragraph?
-             Could I actually learn something from doing so? All these questions were running through
-              his head as he pressed the generate button. To his surprise,
-              he found what she least expected to see.</p>
-             <a href=""> Get Started</a>
-             </div>
-            
+            <h1>Landing Page</h1>
+            <p>Patrick didn't want to go. The fact that she was insisting they must go made him want to go even less.
+                 He had no desire to make small talk with strangers he would never again see just to be polite.
+                  But she insisted that Patrick go,
+                 and she would soon find out that this would be the biggest mistake she could make in their relationship.</p>
+                 <a href="">Get Started</a>
+        </div>
     </div>
 </body>
 </html>
